rails_admin notifications

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,3 +41,10 @@ en:
   qty: "Qty"
   total: "Total"
   subtotal: "Subtotal"
+
+  admin:
+    actions:
+      overview:
+        menu: 'Notifications'
+        title: 'Orders and ratings'
+        breadcrumb: 'Notifications'
